Fix build failing in JDK 23 environments